--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,35 +1,40 @@
+button {
+  background-color: #4caf50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
 div {
-  width: 100px;
-  height: 100px;
-  background-color: red;
+  width: 20%;
+  height: 20%;
   position: relative;
-  animation-name: example;
-  animation-duration: 4s;
+  animation: example 20s infinite;
 }
 
 @keyframes example {
   0% {
-    background-color: red;
     left: 0px;
     top: 0px;
   }
   25% {
-    background-color: yellow;
     left: 200px;
     top: 0px;
   }
   50% {
-    background-color: blue;
     left: 200px;
     top: 200px;
   }
   75% {
-    background-color: green;
     left: 0px;
     top: 200px;
   }
   100% {
-    background-color: red;
     left: 0px;
     top: 0px;
   }
