--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,8 @@
+body {
+  color: cornsilk;
+  background-color: black;
+  font-family: 'Roboto', sans-serif;
+}
 button {
   background-color: #4caf50; /* Green */
   border: none;
@@ -10,7 +15,7 @@ button {
   margin-bottom: 10px;
 }
 
-div {
+.div1 {
   width: 20%;
   height: 20%;
   position: relative;
