--- a/assets/styles.css
+++ b/assets/styles.css
@@ -14,12 +14,22 @@ button {
   font-size: 16px;
   margin-bottom: 10px;
 }
-
+video {
+  width: 30%;
+  height: 30%;
+}
 .div1 {
-  width: 20%;
-  height: 20%;
+  width: 100%;
+  height: 100%;
   position: relative;
   animation: example 20s infinite;
+}
+.div2 {
+  margin-left: 50%;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  animation: example2 20s infinite;
 }
 
 @keyframes example {
@@ -42,5 +52,28 @@ button {
   100% {
     left: 0px;
     top: 0px;
+  }
+}
+
+@keyframes example2 {
+  0% {
+    left: 100px;
+    top: 200px;
+  }
+  25% {
+    left: 100px;
+    top: 0px;
+  }
+  50% {
+    left: 100px;
+    top: 0px;
+  }
+  75% {
+    left: 0px;
+    top: 200px;
+  }
+  100% {
+    left: 200px;
+    top: 200px;
   }
 }
