--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,7 +1,14 @@
+html,
 body {
-  color: cornsilk;
+  margin: 0px;
+  height: 100%;
   background-color: black;
-  font-family: 'Roboto', sans-serif;
+  color: antiquewhite;
+}
+
+.box {
+  background-image: url('intro_web.gif');
+  height: 100%;
 }
 button {
   background-color: #4caf50; /* Green */
@@ -14,20 +21,18 @@ button {
   font-size: 16px;
   margin-bottom: 10px;
 }
+
 video {
   width: 30%;
   height: 30%;
 }
 .div1 {
-  width: 100%;
-  height: 100%;
   position: relative;
   animation: example 20s infinite;
 }
 .div2 {
   margin-left: 50%;
-  width: 100%;
-  height: 100%;
+
   position: relative;
   animation: example2 20s infinite;
 }
