--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,11 +6,53 @@ body {
   color: antiquewhite;
 }
 .animation1 {
-  animation: fadeIn ease 12s;
-  -webkit-animation: fadeIn ease 12s;
-  -moz-animation: fadeIn ease 12s;
-  -o-animation: fadeIn ease 12s;
-  -ms-animation: fadeIn ease 12s;
+  animation: fadeIn ease 20s;
+  -webkit-animation: fadeIn ease 20s;
+  -moz-animation: fadeIn ease 20s;
+  -o-animation: fadeIn ease 20s;
+  -ms-animation: fadeIn ease 20s;
+}
+.fadeout {
+  animation: fadeOut ease 20s;
+  -webkit-animation: fadeOut ease 20s;
+  -moz-animation: fadeOut ease 20s;
+  -o-animation: fadeOut ease 20s;
+  -ms-animation: fadeOut ease 20s;
+}
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-moz-keyframes fadeIn {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-o-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 .box {
   background-image: url('');
