--- a/assets/styles.css
+++ b/assets/styles.css
@@ -60,8 +60,7 @@ body {
   }
 }
 .box {
-  background-image: url('');
-  background-color: black;
+  background-image: url('Intro-Page2.gif');
 
   height: 100%;
 }
@@ -149,11 +148,11 @@ video {
 }
 
 .flower {
-  animation: fadeIn ease 12s;
-  -webkit-animation: fadeIn ease 12s;
-  -moz-animation: fadeIn ease 12s;
-  -o-animation: fadeIn ease 12s;
-  -ms-animation: fadeIn ease 12s;
+  animation: fadeIn ease 20s;
+  -webkit-animation: fadeIn ease 20s;
+  -moz-animation: fadeIn ease 20s;
+  -o-animation: fadeIn ease 20s;
+  -ms-animation: fadeIn ease 20s;
 }
 @keyframes fadeIn {
   0% {
