--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,7 +2,7 @@ html,
 body {
   margin: 0px;
   height: 100%;
-  background-color: black;
+
   color: antiquewhite;
   overflow: hidden;
 }
@@ -61,7 +61,8 @@ body {
 }
 .box {
   background-image: url('Intro-Page2.gif');
-
+  background-repeat: no-repeat;
+  width: 100%;
   height: 100%;
 }
 .flowertwo {
