--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,7 +2,7 @@ html,
 body {
   margin: 0px;
   height: 100%;
-
+  width: 100%;
   color: antiquewhite;
   overflow: hidden;
 }
@@ -60,10 +60,16 @@ body {
   }
 }
 .box {
-  background-image: url('Intro-Page2.gif');
+  background-image: url("Intro-Page2.gif");
+
+  /* Full height */
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  background-position: center;
   background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
+  background-size: cover;
+}
 }
 .flowertwo {
   width: 50%;
