--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,6 +7,19 @@ body {
   overflow: hidden;
 }
 
+.backgr {
+  background-color: black;
+  width: 100%;
+  height: 100%;
+}
+.box {
+  width: 90%;
+  height: 90%;
+  background-image: url('Intro-Page2.gif');
+
+  background-size: 100% 100%;
+}
+
 .animation1 {
   height: 100%;
   width: 100%;
@@ -59,18 +72,7 @@ body {
     opacity: 1;
   }
 }
-.box {
-  background-image: url("Intro-Page2.gif");
 
-  /* Full height */
-  height: 100%; 
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-}
 .flowertwo {
   width: 50%;
   margin-left: 40%;
