--- a/assets/styles.css
+++ b/assets/styles.css
@@ -21,7 +21,7 @@ body {
   background-size: 100% 100%;
 }
 .flower {
-  margin-top: 15%;
+  margin-top: 300px;
 
   margin-left: 25%;
   height: 40%;
