--- a/assets/styles.css
+++ b/assets/styles.css
@@ -220,3 +220,11 @@ button {
     opacity: 1;
   }
 }
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) {
+  /* STYLES GO HERE */
+  .box {
+    background-image: url('Intro-Page-Mobile.gif');
+    width: 100%;
+    height: 100%;
+  }
+}
