--- a/assets/styles.css
+++ b/assets/styles.css
@@ -227,4 +227,9 @@ button {
     width: 100%;
     height: 100%;
   }
+  .flower {
+    margin-left: 0%;
+    height: 50%;
+    width: 100%;
+  }
 }
