Trying something new

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -237,7 +237,7 @@ video {
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) {
   /* STYLES GO HERE */
   .box {
-    background-image: url('Intro-Page-Mobile.gif');
+    background-image: url('mobilePage1_animation_transparant.gif');
     width: 100%;
     height: 100%;
   }
