--- a/assets/styles.css
+++ b/assets/styles.css
@@ -234,9 +234,10 @@ video {
     opacity: 1;
   }
 }
-@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) {
+@media only screen and (min-device-width: 360px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) {
   /* STYLES GO HERE */
   .box {
+    background-image: unset url(Intro-Page2.gif);
     background-image: url('mobilePage1_animation_transparant.gif');
     width: 100%;
     height: 100%;
