--- a/assets/styles.css
+++ b/assets/styles.css
@@ -16,7 +16,7 @@ body {
   position: fixed;
   width: 90%;
   height: 90%;
-  /*background-image: url('Intro-Page2.gif');*/
+  background-image: url('Intro-Page2.gif');
 
   background-size: 100% 100%;
 }
@@ -234,7 +234,22 @@ video {
     opacity: 1;
   }
 }
-
+@media only screen and (min-device-width: 360px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) {
+  /* STYLES GO HERE */
+  .box1 {
+    background-image: url('mobilePage1_animation_transparant.gif');
+    width: 100%;
+    height: 100%;
+  }
+  .flower {
+    margin-left: 0%;
+    height: 50%;
+    width: 100%;
+  }
+  .flowertwo {
+    height: 500px;
+  }
+}
 @media only screen and (max-width: 600px) {
   .box1 {
     background-image: url('mobilePage1_animation_transparant.gif');
