--- a/assets/styles.css
+++ b/assets/styles.css
@@ -234,7 +234,7 @@ video {
     opacity: 1;
   }
 }
-@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) {
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) {
   /* STYLES GO HERE */
   .box {
     background-image: url('mobilePage1_animation_transparant.gif') !important;
