--- a/assets/styles.css
+++ b/assets/styles.css
@@ -31,6 +31,10 @@ body {
   width: 100%;
   margin-top: 20%;
 }
+audio {
+  margin-top: 20%;
+  margin-left: 40%;
+}
 
 .animation1 {
   height: 100%;
