got videos in line on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -254,19 +254,22 @@ video {
     height: 500px;
   }
   .fire {
-    margin-left: 3%;
+    margin-left: 5%;
     margin-top: 0%;
   }
   .topdiv {
-    margin-left: 3%;
+    margin-left: 5%;
     margin-top: 0%;
   }
   .leftvid {
-    margin-left: 3%;
+    margin-left: 5%;
   }
   .rightvid {
     float: none;
-    margin-left: 3%;
+    margin-left: 5%;
+  }
+  video {
+    width: 250px;
   }
   audio {
     margin-top: 90%;
