--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,7 +3,7 @@ body {
   margin: 0px;
   height: 100%;
   width: 100%;
-  color: white;
+  color: black;
   background-color: black;
   overflow: hidden;
 }
