--- a/assets/styles.css
+++ b/assets/styles.css
@@ -58,7 +58,7 @@ audio {
   height: 100%;
   width: 100%;
 
-  background-image: url('WebPage2.gif');
+  background-image: url('Web_Page2.gif');
   /* animation: fadeIn ease 20s;
   -webkit-animation: fadeIn ease 20s;
   -moz-animation: fadeIn ease 20s;
