--- a/assets/styles.css
+++ b/assets/styles.css
@@ -115,8 +115,9 @@ audio {
 }
 
 .please {
-  width: 400px;
-  height: 320px;
+  margin-left: 5%;
+  width: 300px;
+  height: 200px;
   background: url(test.gif);
   background-repeat: no-repeat;
 
@@ -127,8 +128,8 @@ audio {
   margin-left: 5%;
 }
 .circle {
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   border-radius: 90%;
   margin-left: 5%;
   object-fit: cover;
