--- a/assets/styles.css
+++ b/assets/styles.css
@@ -332,4 +332,10 @@ audio {
     background: url(test.gif);
     background-repeat: no-repeat;
     clip-path: polygon(50% 0, 0 100%, 100% 100%);
+  }
+  .lastflower {
+    width: 420px;
+    left: 0px;
+    top: 451px;
+  }
 }
