--- a/assets/styles.css
+++ b/assets/styles.css
@@ -268,6 +268,13 @@ audio {
 }
 @media only screen and (min-width: 375px) and (max-width: 812px) {
   /* STYLES GO HERE */
+
+  html,
+  body {
+    color: black;
+    background-color: white;
+  }
+
   .box {
     background-image: url('mobilePage1_animation_transparant.gif') !important;
     width: 100%;
