--- a/assets/styles.css
+++ b/assets/styles.css
@@ -12,6 +12,14 @@ body {
 .square {
   margin-left: 5%;
 }
+.moblieonly {
+  visibility: hidden;
+  height: 0%;
+  width: 0%;
+}
+.moblieimg {
+  width: 400px;
+}
 
 .backgr {
   background-color: black;
@@ -274,6 +282,19 @@ audio {
     color: black;
     background-color: white;
   }
+  .moblieonly {
+    visibility: visible;
+    background-image: url('mobilePage1_text.gif');
+    background-size: 100% 100%;
+    width: 100%;
+    height: 100%;
+  }
+  .mobilebutton {
+    display: absolute;
+    background-color: lawngreen;
+    height: 50px;
+    width: 50px;
+  }
 
   .box {
     background-image: url('mobilePage1_animation_transparant.gif') !important;
@@ -354,5 +375,11 @@ audio {
   }
   .hon {
     margin-left: 25%;
+  }
+  button {
+    margin-top: 100%;
+    width: 66px;
+    height: 56px;
+    margin-left: 40%;
   }
 }
