--- a/assets/styles.css
+++ b/assets/styles.css
@@ -284,7 +284,7 @@ audio {
   }
   .moblieonly {
     visibility: visible;
-    background-image: url('mobilePage1_text.gif');
+    background-image: url('mobile1Idea2_text.gif');
     background-size: 100% 100%;
     width: 100%;
     height: 100%;
@@ -377,7 +377,7 @@ audio {
     margin-left: 25%;
   }
   button {
-    margin-top: 100%;
+    margin-top: 700px;
     width: 66px;
     height: 56px;
     margin-left: 40%;
