--- a/assets/styles.css
+++ b/assets/styles.css
@@ -26,6 +26,12 @@ body {
   width: 100%;
   height: 100%;
 }
+.rbutton {
+  float: right;
+  margin-right: 10%;
+  height: 50px;
+  width: 100px;
+}
 .box {
   position: fixed;
   width: 90%;
@@ -366,6 +372,7 @@ audio {
     left: 0px;
     top: 555px;
   }
+
   .int {
     display: inherit;
     margin-left: 25%;
