--- a/assets/styles.css
+++ b/assets/styles.css
@@ -11,7 +11,47 @@ body {
 
 .square {
   margin-left: 5%;
+  animation: shake 10s;
+
+  /* When the animation is finished, start again */
+  animation-iteration-count: infinite;
 }
+@keyframes shake {
+  0% {
+    transform: translate(2px, 2px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-2px, -3px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(2px, 2px) rotate(1deg);
+  }
+  30% {
+    transform: translate(4px, 3px) rotate(0deg);
+  }
+  40% {
+    transform: translate(2px, 2px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-2px, 3px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(2px, 2px) rotate(0deg);
+  }
+  70% {
+    transform: translate(4px, 2px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(2px, 2px) rotate(1deg);
+  }
+  90% {
+    transform: translate(3px, 3px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+}
+
 .moblieonly {
   visibility: hidden;
   height: 0%;
@@ -138,6 +178,10 @@ audio {
 
   /* The points are: centered top, left bottom, right bottom */
   clip-path: polygon(50% 0, 0 100%, 100% 100%);
+  animation: shake 10s;
+
+  /* When the animation is finished, start again */
+  animation-iteration-count: infinite;
 }
 .int {
   margin-left: 5%;
@@ -148,6 +192,8 @@ audio {
   border-radius: 90%;
   margin-left: 5%;
   object-fit: cover;
+}
+.circledance {
 }
 
 .top {
