--- a/assets/styles.css
+++ b/assets/styles.css
@@ -357,6 +357,9 @@ audio {
     width: 100%;
     height: 100%;
   }
+  .circledance {
+    margin-left: 5%;
+  }
   .mobilebutton {
     display: absolute;
     background-color: lawngreen;
