--- a/assets/styles.css
+++ b/assets/styles.css
@@ -127,7 +127,7 @@ body {
 .lastflower {
   width: 31.25rem;
   position: absolute;
-  left: 30%;
+  left: 36%;
   top: 35%;
 }
 
@@ -494,7 +494,7 @@ audio {
     display: none;
   }
 }
-@media only screen and (min-device-width: 768px) and (max-device-width: 1025px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1025px) {
   .lastflower {
     top: 25%;
     left: 25%;
@@ -512,7 +512,7 @@ audio {
     margin-left: 0%;
   }
 }
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1025px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
+@media only screen and (min-device-width: 1024px) and (max-device-width: 1224px) {
   .lastflower {
     top: 19%;
     left: 25%;
@@ -532,5 +532,10 @@ audio {
   }
   .box {
     height: 60%;
+  }
+}
+@media only screen and (min-device-width: 1224px) and (max-device-width: 1500px) {
+  .flower {
+    margin-left: 24%;
   }
 }
