--- a/assets/styles.css
+++ b/assets/styles.css
@@ -366,6 +366,9 @@ audio {
     color: black;
     background-color: white;
   }
+  .front {
+    background-image: url('mobilePage3.gif');
+  }
   .mobileheader {
     display: inline-flex;
   }
