--- a/assets/styles.css
+++ b/assets/styles.css
@@ -15,7 +15,7 @@ body {
 .front {
   width: 100%;
   height: 100%;
-  background-image: url('page3.gif');
+  background-image: url('Web-page3.2.gif');
 
   background-size: 100% 100%;
 }
@@ -367,7 +367,7 @@ audio {
     background-color: white;
   }
   .front {
-    background-image: url('mobilePage3.gif');
+    background-image: url('mobilePage3.2.gif');
   }
   .mobileheader {
     display: inline-flex;
