--- a/assets/styles.css
+++ b/assets/styles.css
@@ -362,6 +362,7 @@ audio {
     opacity: 1;
   }
 }
+/*Mobile */
 @media only screen and (min-width: 280px) and (max-width: 700px) {
   /* STYLES GO HERE */
 
@@ -504,13 +505,14 @@ audio {
 }
 @media only screen and (min-width: 701px) and (max-width: 1025px) {
   .lastflower {
-    top: 27%;
-    left: 45%;
+    top: 25%;
+    left: 50%;
   }
   .flower {
     margin-left: 2%;
   }
   .mobilehead {
+    height: 8%;
     width: 46%;
   }
 }
