--- a/assets/styles.css
+++ b/assets/styles.css
@@ -469,8 +469,8 @@ audio {
   }
   .lastflower {
     width: 100px;
-    left: 150px;
-    top: 500px;
+    left: 35%;
+    top: 75%;
   }
 
   .int {
