--- a/assets/styles.css
+++ b/assets/styles.css
@@ -376,7 +376,7 @@ audio {
     background-image: url('mobilePage3.2.gif');
   }
   .mobileheader {
-    width: 100%;
+    max-width: 100%;
     display: inline-flex;
     margin-top: 5%;
   }
@@ -388,7 +388,7 @@ audio {
     height: 100%;
   }
   .circledance {
-    margin-left: 7%;
+    margin-left: 5%;
   }
   .mobilebutton {
     display: absolute;
@@ -452,7 +452,7 @@ audio {
     width: 100%;
     height: 62%;
     /*display: inline;*/
-    margin-left: 8%;
+    margin-left: 5%;
     animation: none;
   }
   .leftvid {
@@ -497,7 +497,7 @@ audio {
     width: 100%;
   }
   .mobiletri {
-    margin-left: 8%;
+    margin-left: 3%;
   }
   .rbutton-mobile {
     visibility: visible;
