think i got mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -519,7 +519,7 @@ audio {
     margin-left: 35%;
     margin-right: 35%;
     height: 36px;
-    width: 30%px;
+    width: 30%;
   }
   .rbutton {
     visibility: hidden;
