--- a/assets/styles.css
+++ b/assets/styles.css
@@ -8,6 +8,7 @@ body {
   overflow: hidden;
   font-family: silom;
 }
+
 .clickme {
   background-color: cyan;
   height: 250px;
@@ -37,9 +38,12 @@ body {
   visibility: hidden;
 }
 .replay {
-  width: 15%;
-  margin-left: 40%;
-  margin-right: 45%;
+  height: 10%;
+  width: 5%;
+  border-radius: 100%;
+  margin-top: 5%;
+  margin-left: 46%;
+  margin-right: 50%;
 }
 
 @keyframes shake {
@@ -142,7 +146,7 @@ body {
 }
 audio {
   width: 25%;
-  margin-right: 39%;
+  margin-right: 43%;
   margin-left: 35%;
   margin-top: 10%;
 }
