--- a/assets/styles.css
+++ b/assets/styles.css
@@ -38,7 +38,7 @@ body {
   visibility: hidden;
 }
 .replay {
-  background-color: antiquewhite;
+  background-color: #b0f1bb;
   height: 10%;
   width: 5%;
   border-radius: 100%;
@@ -433,10 +433,10 @@ audio {
     width: 100%;
   }
   .flowertwo {
-    height: 15%;
+    height: 14%;
     margin-top: 71%;
     margin-bottom: 75%;
-    width: 20%;
+    width: 19%;
     margin-left: 38%;
     margin-right: 38%;
   }
