--- a/assets/styles.css
+++ b/assets/styles.css
@@ -42,6 +42,7 @@ body {
   height: 10%;
   width: 5%;
   border-radius: 100%;
+  border-color: black;
   margin-top: 5%;
   margin-left: 46%;
   margin-right: 50%;
