--- a/assets/styles.css
+++ b/assets/styles.css
@@ -596,12 +596,20 @@ audio {
     animation: none;
   }
   .pageonebut {
+    outline: none;
+    background-color: #b7b0f1;
+
+    border: solid 2px;
+    border-radius: 90%;
     margin-top: 480px;
     width: 20%;
-    height: 56px;
+    height: 76px;
     margin-left: 40%;
     margin-right: 40%;
     margin-bottom: 60%;
+  }
+  .pageonebut:active {
+    background-color: aqua;
   }
   .mobilehead {
     width: 100%;
